--- a/stack-layout/build.gradle
+++ b/stack-layout/build.gradle
@@ -27,5 +27,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:cardview-v7:24.2.0'
     testCompile 'junit:junit:4.12'
 }
